fix fd leak & optimize oom kill (use unsafe for netty direct mem allocation & less JVM memory) (#834)
* fix proxy channel leak for
1. backend channel create fail
2. frontend channel closed before init

* netty use unsafe for memory allocation

* add sessionId and some log for proxy debug

* limit max memory proxy used

* avoid proxy session checking before session established

---------

Co-authored-by: lishanglin <sl_li@trip.com>